--- a/css/tailwind/src/index.html
+++ b/css/tailwind/src/index.html
@@ -6,8 +6,8 @@
   <link href="../dist/output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-xl underline">
-    nothing important
+  <h1 class="text-3xl underline">
+    nothing important1 
   </h1>
   <div class=""text-3xl">text </div>
   <script text="text/javascript">
